<resources>
    <string name="app_name">Folio</string>

    <!-- facebook keys-->
    <string name="facebook_app_id">984494681943294</string>
    <string name="fb_login_protocol_scheme">fb984494681943294</string>


    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="register">Register</string>
    <string name="login">Login</string>
    <string name="get_started">Get started</string>
    <string name="profile_text">Create and design your personal portfolio</string>
    <string name="meet">Meet new people and explore their profiles</string>
    <string name="communicate">Communicate and collaborate with clients and co-contributors</string>
    <string name="password">Password</string>
    <string name="email">Email</string>
    <string name="forgot_password">Forgot password?</string>
    <string name="or_create_an_account_with_us">Or, create an account with us</string>
    <string name="continue_with_google">Continue with Google</string>
    <string name="continue_with_facebook">Continue with Facebook</string>
    <string name="continue_with_twitter">Continue with Twitter</string>
    <string name="continue_with">Continue with</string>
    <string name="confirm_password">Confirm password</string>
    <string name="continue_text">Continue</string>
    <string name="first">First</string>
    <string name="last">Last</string>
    <string name="name">Name</string>
    <string name="location">Location</string>
    <string name="role_selection">Select up to three (3) roles that best describe you</string>
    <string name="bioLiveData">Bio</string>
    <string name="help_the_community_get_to_know_you_better">Help the community get to know you better</string>
    <string name="recruiter">Recruiter</string>
    <string name="designer">Designer</string>
    <string name="illustrator">Illustrator</string>
    <string name="developer">Developer</string>
    <string name="enthusiast">Enthusiast</string>
    <string name="artisan">Artisan</string>
    <string name="photographer">Photographer</string>
    <string name="reset_password">Reset password</string>
    <string name="an_email_containing_instrustions">An email containing instrustions to help you reset your password will be sent to the email address associated with your account</string>
    <string name="feed">Feed</string>
    <string name="explore">Explore</string>
    <string name="messages">Messages</string>
    <string name="profile">Profile</string>
    <string name="invalid_credentials">Invalid credentials</string>
    <string name="okay">Okay</string>
    <string name="special_thanks_to_olivier_umukura">Special thanks to Olivier Umukura</string>
    <string name="failed_to_sign_in_google">Failed to sign in with your Google account</string>
    <string name="failed_to_sign_in_twitter">Failed to sign in with your Twitter account</string>

    <string name="failed_to_sign_in_facebook">Failed to sign in with your Facebook account</string>
    <string name="email_invalid">Invalid email</string>
    <string name="error_invalid_password_format">Password must be alphanumeric and not less than 8 characters long</string>
    <string name="error_password_match">Passwords do not match</string>
    <string name="first_name_required">First name is required</string>
    <string name="last_name_required">Last name is required</string>
    <string name="email_retrieval_error">We could not find a valid email associated with this account</string>
    <string name="select_at_least_one_role">Select at least one role</string>
    <string name="overflow">Overflow</string>
    <string name="_1_s_likes"><b>%1$s</b> likes</string>
    <string name="_1_s_followers"><b>%1$s</b> followers</string>
    <string name="role_role_role">Role | Role | Role</string>
    <string name="full_name">%1$s %2$s</string>
    <string name="account">Account</string>
    <string name="my_posts">My posts</string>
    <string name="my_likes">My likes</string>
    <string name="more_settings">More settings</string>
    <string name="security">Security</string>
    <string name="notifications">Notifications</string>
    <string name="edit_profile">Edit\nprofile</string>
    <string name="share_profile">Share profile</string>
    <string name="share_post">Share post</string>
    <string name="quick_settings">Quick settings</string>
    <string name="search">Search</string>
    <string name="save">Save</string>
    <string name="attach">Attach</string>
    <string name="new_post">New Post</string>
    <string name="cancel">Cancel</string>
    <string name="post">Post</string>
    <string name="what_s_up">What\'s up?</string>
    <string name="you">You</string>
    <string name="complete_your_profile">complete\nyour\nprofile</string>
    <string name="tap_to_edit">Tap to edit</string>
    <string name="gallery">Gallery</string>
    <string name="camera">Camera</string>
    <string name="delete_photo">Remove</string>
    <string name="are_you_sure_delete_profile">Are you sure you want to remove your current profile image?</string>
    <string name="select_photo_source">Select photo source</string>
    <string name="pick_image_intent_chooser_title">@string/select_photo_source</string>
    <string name="permissions_rationale">Folio will require access to your storage and camera in order to upload a profile photo</string>
    <string name="failed_user_update_photo">Failed to update photo</string>
    <string name="photo_updated_successfully">Photo updated successfully</string>
    <string name="nothing_to_see_here_yet_npost_something_or_follow_someone_to_see_their_posts">Nothing to see here yet.\nPost something or follow someone to see their posts</string>
    <string name="follow">Follow</string>
    <string name="following">Following</string>
    <string name="message">Message</string>
    <string name="hey_check_out">Hey, check out this folio \n</string>
    <string name="hey_check_out_post">Check out this awesome post on folio! \n</string>
    <string name="user_followed_successfully">User added to following list successfully</string>
    <string name="not_following_this_user">Not following this user</string>
    <string name="type_message_here">Type message here</string>
    <string name="send">Send</string>

    <string-array name="photo_options">
        <item>@string/gallery</item>
        <item>@string/camera</item>
        <item>@string/delete_photo</item>
    </string-array>

    <string-array name="list_defaults">
        <item>First</item>
        <item>Second</item>
    </string-array>


    <string-array name="edit_profile_options">
        <item>Edit profile name</item>
        <item>Edit profile photo</item>
        <item>Update roles</item>
        <item>Update email</item>
    </string-array>

</resources>
