<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <variable
            name="viewmodel"
            type="com.codedevtech.portfolioapp.viewmodels.AuthenticationFragmentViewModel" />

    </data>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="@dimen/buttonPadding"
        tools:context=".fragments.AuthenticationExtrasBottomSheet">


        <com.google.android.material.button.MaterialButton
            android:id="@+id/googleAuth"
            style="@style/ButtonOutlineThin"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/buttonPadding"
            android:layout_weight="1"
            android:backgroundTint="@color/my_app_field_backdrop"
            android:padding="@dimen/buttonBigPadding"
            android:text="@string/continue_with_google"
            android:onClick="@{()->viewmodel.attemptGoogleSignIn()}"
            android:textAllCaps="false"
            app:icon="@drawable/google_logo"
            app:iconTint="@null" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/facebookAuth"
            style="@style/ButtonOutlineThin"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/buttonPadding"
            android:layout_weight="1"
            android:backgroundTint="@color/my_app_field_backdrop"
            android:padding="@dimen/buttonBigPadding"
            android:onClick="@{()->viewmodel.attemptFacebookSignIn()}"
            android:text="@string/continue_with_facebook"
            android:textAllCaps="false"
            app:icon="@drawable/facebook_logo"
            app:iconTint="@null" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/twitterAuth"
            style="@style/ButtonOutlineThin"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/buttonPadding"
            android:layout_weight="1"
            android:backgroundTint="@color/my_app_field_backdrop"
            android:padding="@dimen/buttonBigPadding"
            android:onClick="@{()->viewmodel.attemptTwitterSignIn()}"
            android:text="@string/continue_with_twitter"
            android:textAllCaps="false"
            app:icon="@drawable/twitter_logo"
            app:iconTint="@null" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/register"
            style="@style/Button"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_margin="@dimen/buttonPadding"
            android:backgroundTint="@android:color/white"
            android:padding="@dimen/buttonBigPadding"
            android:onClick="@{()->viewmodel.goToManualRegistration()}"
            android:text="@string/or_create_an_account_with_us"
            android:textAlignment="center"
            android:textAllCaps="false" />

    </LinearLayout>
</layout>